<resources>
    <string name="app_name">Weather</string>
    <string name="app_alias" translatable="false">#Yamblz.Weather</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Navigation region -->
    <string name="main_activity_navigation_weather">Weather</string>
    <string name="main_activity_navigation_common_group">Common</string>
    <string name="main_activity_navigation_settings">Settings</string>
    <string name="main_activity_navigation_about">About</string>
    <string name="add_place">Add place</string>
    <!-- Endregion -->

    <!-- Forecasts -->
    <string name="forecast_more">More</string>
    <!-- Endregion -->

    <!-- Actionbar region -->
    <string name="main_activity_action_search">Search</string>
    <string name="main_activity_action_gps">Load weather at current location</string>
    <string name="main_activity_action_search_hint">Specify place</string>
    <string name="main_activity_action_search_settings_description">City list</string>
    <string name="main_activity_action_search_label" translatable="false">@string/app_name</string>
    <string name="main_activity_action_search_place">Location update...</string>
    <!-- Endregion -->

    <!--Time-->
    <string name="morning">Morning</string>
    <string name="daytime">Daytime</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <!--Endregion-->

    <!-- Weather titles -->
    <string name="all_weather_sunny_title">Sunny</string>
    <string name="all_weather_clear_night_title">Clear sky</string>
    <string name="all_weather_foggy_title">Foggy</string>
    <string name="all_weather_cloudy_title">Cloudy</string>
    <string name="all_weather_rainy_title">Rainy</string>
    <string name="all_weather_snowy_title">Snowy</string>
    <string name="all_weather_thunder_title">Thunder</string>
    <string name="all_weather_drizzle_title">Drizzle</string>

    <string name="all_weather_ms">m/s</string>
    <string name="all_weather_kmh">km/h</string>
    <string name="all_weather_mmhg">mmHg</string>
    <string name="all_weather_pascal">hPa</string>
    <!-- Endregion -->

    <!--Time-->
    <string name="tomorrow">Tomorrow</string>
    <string name="day_after_tomorrow">Day after tomorrow</string>
    <!--Endregion-->

    <!-- About fragment -->
    <string name="about_fragment_description">Application for the weather monitor</string>
    <string name="about_fragment_icons_license">Weather icons by @erikflowers \n(GitHub)</string>
    <string name="about_fragment_footer">Version 1.0.3</string>
    <!-- Endregion -->

    <!-- Weather fragment -->
    <string name="weather_fragment_current_temperature">&#xf055; %1$.0f %2$s</string>
    <string name="weather_fragment_current_temperature_extreme" translatable="false">%1$.0f %3$s\n%2$.0f %3$s</string>
    <string name="weather_fragment_wind_speed">&#xf082; %0$.0f %2$s</string>
    <string name="weather_fragment_pressure">&#xf079; %0$.0f %2$s</string>
    <string name="weather_fragment_humidity">&#xf04e; %1$.0f %%</string>
    <!-- Endregion -->

    <!-- Forecasts -->
    <string name="api_license">Данные предоставлены сервисом OpenWeatherMap</string>
    <string name="forecasts_temperature_iconyfied" translatable="false">&#xf055;    %1$.0f %2$s</string>
    <string name="forecasts_temperature" translatable="false">%1$.0f %2$s</string>
    <string name="forecasts_current_temperature_extreme" translatable="false">%1$.0f %3$s\n%2$.0f %3$s</string>
    <string name="forecasts_wind_speed" translatable="false">&#xf082; %0$.0f %2$s</string>
    <string name="forecasts_pressure" translatable="false">&#xf079; %0$.0f %2$s</string>
    <string name="forecasts_humidity" translatable="false">&#xf04e; %1$.0f %%</string>
    <!-- Endregion -->

    <!-- Settings fragment -->
    <string name="settings_fragment_base_group">Units</string>
    <string name="settings_fragment_service_group">Weather update</string>
    <string name="settings_fragment_temperature">&#xf053; Temperature</string>
    <string name="settings_fragment_pressure">&#xf079; Pressure</string>
    <string name="settings_fragment_wind_speed">&#xf021; Wind Speed</string>
    <string name="settings_fragment_change_period">&#xf091; Change interval. Current: %1$d min.</string>
    <string name="settings_fragment_available_intervals_title">Set interval</string>
    <string name="settings_fragment_available_intervals_cancel">Cancel</string>
    <string name="settings_fragment_available_intervals_ok">OK</string>
    <string name="settings_fragment_available_intervals_switcher">Enable background updates</string>
    <string name="navigation_fragment_settings">Settings</string>
    <string name="today_card">Today, </string>
    <string name="on_gps_need_off">You can always find the place you need by clicking on 🔍</string>

    <string-array name="settings_fragment_available_interval_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
        <item>75 minutes</item>
        <item>90 minutes</item>
        <item>120 minutes</item>
    </string-array>
    <!-- Endregion -->
</resources>
