<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_activity_navigation_weather"
            android:icon="@drawable/ic_weather_black_24dp"
            android:title="@string/main_activity_navigation_weather"
            />

        <item
            android:title="@string/main_activity_navigation_common_group">
            <menu>
                <item
                    android:id="@+id/main_activity_navigation_about"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:checkable="true"
                    android:title="@string/main_activity_navigation_about"
                    />
                <item
                    android:id="@+id/main_activity_navigation_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:checkable="true"
                    android:title="@string/main_activity_navigation_settings"
                    />
            </menu>
        </item>
    </group>
</menu>
