<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGreyMd200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_base_group"
            android:textColor="@color/colorGreyMd900"
            android:textSize="22sp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <sasd97.java_blog.xyz.richtextview.RichTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:theme="@style/SettingsTitle"
                        android:text="@string/settings_fragment_temperature"
                        app:fontAsset="weather_icons.ttf"
                        android:layout_toLeftOf="@+id/fragment_settings_temperature_celsius"
                        android:layout_toStartOf="@+id/fragment_settings_temperature_celsius"
                        />

                    <Button
                        android:id="@+id/fragment_settings_temperature_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_celsius"
                        android:layout_toLeftOf="@+id/fragment_settings_temperature_fahrenheit"
                        android:layout_toStartOf="@+id/fragment_settings_temperature_fahrenheit" />

                    <Button
                        android:id="@+id/fragment_settings_temperature_fahrenheit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_fahrenheit"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <sasd97.java_blog.xyz.richtextview.RichTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:theme="@style/SettingsTitle"
                        android:text="@string/settings_fragment_wind_speed"
                        app:fontAsset="weather_icons.ttf"
                        android:layout_toLeftOf="@+id/fragment_settings_speed_ms"
                        android:layout_toStartOf="@+id/fragment_settings_speed_ms"
                        />

                    <Button
                        android:id="@+id/fragment_settings_speed_ms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_ms"
                        android:layout_toLeftOf="@+id/fragment_settings_speed_kmh"
                        android:layout_toStartOf="@+id/fragment_settings_speed_kmh" />

                    <Button
                        android:id="@+id/fragment_settings_speed_kmh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_kmh"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <sasd97.java_blog.xyz.richtextview.RichTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:theme="@style/SettingsTitle"
                        android:text="@string/settings_fragment_pressure"
                        app:fontAsset="weather_icons.ttf"
                        android:layout_toLeftOf="@+id/fragment_settings_pressure_mmhg"
                        android:layout_toStartOf="@+id/fragment_settings_pressure_mmhg"
                        />

                    <Button
                        android:id="@+id/fragment_settings_pressure_mmhg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_mmhg"
                        android:layout_toLeftOf="@+id/fragment_settings_pressure_pascal"
                        android:layout_toStartOf="@+id/fragment_settings_pressure_pascal" />

                    <Button
                        android:id="@+id/fragment_settings_pressure_pascal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_weather_pascal"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_fragment_service_group"
            android:textColor="@color/colorGreyMd900"
            android:textSize="22sp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground">

                    <sasd97.java_blog.xyz.richtextview.RichTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:theme="@style/SettingsTitle"
                        android:text="@string/settings_fragment_temperature"
                        app:fontAsset="weather_icons.ttf"
                        />


                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>